Changed: simplified grafana IFrame abilities Changed: IFrame protection now uses CSS instead of JS Removed: chromeWebSecurity on cypress tests to allow the testing of contents of IFrames

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/*this disables all events from IFrames, ie. making them readonly*/
+iframe {
+    pointer-events: none;
+}
