--- a/frontend/src/styles/custom-primereact.css
+++ b/frontend/src/styles/custom-primereact.css
@@ -1,3 +1,42 @@
+.p-dropdown {
+    background-color: #30343D !important;
+    border: none !important;
+    box-shadow: none !important;
+}
+
+.p-dropdown-panel {
+    background-color: #22252B !important;
+    color: #DEDEDE !important;
+}
+
+.p-dropdown-header {
+    background-color: #30343D !important;
+    color: #DEDEDE !important;
+}
+
+.p-dropdown-item:not(.p-highlight):not(.p-disabled):hover {
+    background-color: #30343D !important;
+}
+
+.p-dropdown-item {
+    color: #DEDEDE !important;
+    box-shadow: none !important;
+
+}
+
+.p-dropdown-item:hover {
+    color: #DEDEDE !important;
+    background-color: #30343D;
+}
+
+.p-dropdown-item.p-highlight {
+    color: #30343D !important;
+}
+
+.p-dropdown-label {
+    color: #DEDEDE !important;
+}
+
 .p-multiselect {
     background-color: #30343D !important;
     border: none !important;
