--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -14,3 +14,11 @@
 iframe {
     pointer-events: none;
 }
+
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
