Changed: Link from index page to health graphs page

--- a/alert_manager/mail.tmpl
+++ b/alert_manager/mail.tmpl
@@ -7,7 +7,7 @@
 <body>
 
 A new device has moved to a critical state <br/> 
-<a href="http://localhost:3001/">Go to dashboard</a> <br/> <br/>
+<a href="http://localhost:3001/health_graphs">See health graphs</a> <br/> <br/>
 
 Here are all critical devices: <br/> <br/>
 
